# practice

./: C++.cpp  CMakeLists.txt  DJ.cpp  README.md  gen.cpp  main.cpp
0cha/: 0820.cpp  0828.cpp
HW-OD/: 1001.cpp  1002.cpp  1003.cpp  1004.cpp  100zt.cpp  200zt.cpp
MT/: xiaomeide_caidai.cpp
Meta/1/: a.cpp  b.cpp  c.cpp  d.cpp
Meta/2/: a.cpp  b.cpp
XC/: 20241023_B.cpp  4.cpp
contest/0813/: e.cpp  f.cpp  h.cpp  h_SegmentTree.cpp
contest/0815/: 0815a.cpp  0815b.cpp  0815c.cpp  0815d.cpp  0815e.cpp
contest/0820/: a.cpp  b.cpp  c.cpp  d.cpp
contest/0826/: a.cpp  b.cpp  c.cpp  d.cpp  d2.cpp
contest/0830(bt)/: a.cpp  b.cpp  c.cpp  d.cpp
contest/game/: Nim.cpp
files/: CircleOfMonsters.cpp  Football.cpp  LongestRegularBracketSequence.cpp  LongestRegularBracketSequence2.cpp  PointsAndSegments_easy.cpp  Smaller.cpp  topK.cpp
luogu/: P8620.cpp  P8620_r.cpp
stock-problems/: CF865D.cpp
