cmake_minimum_required(VERSION 3.28)
project(codeforces_constructive)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
# 添加所有源文件
# 添加全局编译选项
add_compile_options(-Wall -Wextra -Wpedantic -std=c++20)

add_executable(LongestRegularBracketSequence files/LongestRegularBracketSequence.cpp)
add_executable(gen gen.cpp)
add_executable(LongestRegularBracketSequence2 files/LongestRegularBracketSequence2.cpp)
add_executable(CircleOfMonsters files/CircleOfMonsters.cpp)
add_executable(Football files/Football.cpp)
add_executable(PointsAndSegments_easy files/PointsAndSegments_easy.cpp)
add_executable(Smaller files/Smaller.cpp)
add_executable(h contest/0813/h.cpp)
add_executable(e contest/0813/e.cpp)
add_executable(f contest/0813/f.cpp)
add_executable(e_SegmentTree contest/0813/h_SegmentTree.cpp)
add_executable(0815a contest/0815/0815a.cpp)
add_executable(0815b contest/0815/0815b.cpp)
add_executable(0815c contest/0815/0815c.cpp)
add_executable(0815d contest/0815/0815d.cpp)
add_executable(0815e contest/0815/0815e.cpp)
add_executable(topK files/topK.cpp)
add_executable(Nim contest/game/Nim.cpp)
add_executable(0820 0cha/0820.cpp)
add_executable(a Meta/2/a.cpp)
add_executable(b Meta/1/b.cpp)
add_executable(c Meta/1/c.cpp)
add_executable(d Meta/1/d.cpp)
add_executable(1001 HW-OD/1001.cpp)
add_executable(1002 HW-OD/1002.cpp)
add_executable(1003 HW-OD/1003.cpp)
add_executable(1004 HW-OD/1004.cpp)
add_executable(xiaomeide_caidai MT/xiaomeide_caidai.cpp)

add_executable(d2 contest/0826/d2.cpp)
add_executable(0828 0cha/0828.cpp)
add_executable(DJ DJ.cpp)

add_executable(4 XC/4.cpp)
add_executable(200zt HW-OD/200zt.cpp)
add_executable(CF865D stock-problems/CF865D.cpp)

add_executable(P8620 luogu/P8620.cpp)
add_executable(P8620_r luogu/P8620_r.cpp)